--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -37,9 +37,12 @@
 </div>
 
 <div class="container">
-    <div class="card">
-        <strong th:text="${category.getDescription()}">Category Title</strong>
-    </div>
+
+    <p> Category:</p>
+    <select>
+            <option th:each="category,iterStat :${categorys}"><strong th:text="${category.getDepartment()}">Category Title</strong></option>
+        </select>
+
 
     <div id="products" class="row">
         <div class="col col-sm-12 col-md-6 col-lg-4" th:each="prod,iterStat : ${products}">
@@ -61,6 +64,7 @@
             </div>
         </div>
     </div>
+
 
 </div>
 
