--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -57,3 +57,15 @@
 .list-group-item-text {
     margin: 0 0 11px;
 }
+
+#right {
+    margin-right: 50px;
+}
+
+#left {
+    margin-left: 50px;
+}
+
+#basic-addon1 {
+    margin-right: 10px;
+}
