--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,8 +1,4 @@
-<!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<body>
-
-<div th:fragment="copy">
+<div th:fragment="footer">
     <div class="card">
         <div class="card-body">
             &copy; 2019 Codecool Budapest
@@ -10,5 +6,3 @@
     </div>
 </div>
 
-</body>
-</html>
