--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -197,16 +197,6 @@
                                     </div>
                                 </div>
 
-                                <div class="col-12">
-                                    <label for="username" class="form-label">Username</label>
-                                    <div class="input-group has-validation">
-                                        <span class="input-group-text">@</span>
-                                        <input type="text" class="form-control" id="username" placeholder="Username" required="">
-                                        <div class="invalid-feedback">
-                                            Your username is required.
-                                        </div>
-                                    </div>
-                                </div>
 
                                 <div class="col-12">
                                     <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
@@ -216,11 +206,19 @@
                                     </div>
                                 </div>
 
-                                <div class="col-12">
+                                <div class="col-6">
                                     <label for="address" class="form-label">Address</label>
                                     <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
                                     <div class="invalid-feedback">
                                         Please enter your shipping address.
+                                    </div>
+                                </div>
+
+                                <div class="col-6">
+                                    <label for="address" class="form-label">Post-code</label>
+                                    <input type="text" class="form-control" id="postCode" placeholder="00-150" required="">
+                                    <div class="invalid-feedback">
+                                        Please enter your post code.
                                     </div>
                                 </div>
 
@@ -229,35 +227,6 @@
                                     <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
                                 </div>
 
-                                <div class="col-md-5">
-                                    <label for="country" class="form-label">Country</label>
-                                    <select class="form-select" id="country" required="">
-                                        <option value="">Choose...</option>
-                                        <option>United States</option>
-                                    </select>
-                                    <div class="invalid-feedback">
-                                        Please select a valid country.
-                                    </div>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <label for="state" class="form-label">State</label>
-                                    <select class="form-select" id="state" required="">
-                                        <option value="">Choose...</option>
-                                        <option>California</option>
-                                    </select>
-                                    <div class="invalid-feedback">
-                                        Please provide a valid state.
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3">
-                                    <label for="zip" class="form-label">Zip</label>
-                                    <input type="text" class="form-control" id="zip" placeholder="" required="">
-                                    <div class="invalid-feedback">
-                                        Zip code required.
-                                    </div>
-                                </div>
                             </div>
 
                             <hr class="my-4">
@@ -301,7 +270,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+<!--                <button type="button" class="btn btn-primary">Save changes</button>-->
             </div>
         </div>
     </div>
