--- a/src/main/resources/templates/myCartModal.html
+++ b/src/main/resources/templates/myCartModal.html
@@ -85,7 +85,7 @@
                           </svg>
                         </button>
 
-                        <input id="form1" min="0" name="quantity" value="2" type="number"
+                        <input id="form_quantity" min="0" name="quantity" value="2" type="number"
                                class="form-control form-control-sm" />
 
                         <button class="btn btn-link px-2"
@@ -113,7 +113,7 @@
                 <div class="card mb-4">
                   <div class="card-body p-4 d-flex flex-row">
                     <div class="form-outline flex-fill">
-                      <input type="text" id="form1" class="form-control form-control-lg" />
+                      <input type="text" id="form_discount" class="form-control form-control-lg" />
                       <label class="form-label" for="form1">Discound code</label>
                     </div>
                     <button type="button" class="btn btn-outline-warning btn-lg ms-3">Apply</button>
@@ -123,7 +123,8 @@
 
                 <div class="card">
                   <div class="card-body">
-                    <button type="button" class="btn btn-warning btn-block btn-lg" data-bs-toggle="modal" data-bs-target="#paymentWindow" data-bs-dismiss="modal">Proceed to Pay</button>
+                    <button type="button" id="paymentButton" class="btn btn-warning btn-block btn-lg" data-bs-toggle="modal" data-bs-target="#paymentWindow">Proceed to Pay</button>
+                    <button type="button" id="cartClose" hidden="hidden" data-bs-dismiss="modal">hidden Close</button>
                   </div>
                 </div>
 
@@ -134,7 +135,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+<!--        <button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
     </div>
   </div>
