--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -6,7 +6,9 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">MyShop</a></li>
+        <li><a href="#" class="nav-link px-2 link-secondary">
+          <img src="/img/logo1.png" alt="logo" class="foto"></a></li>
+        <li><a href="#" class="nav-link px-2 link-secondary"></a></li>
         <li class="nav-item" style="display: flex">
           <a class="nav-link px-2 link-secondary" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#checkout-modal">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
