SQL WORK Dao too

--- a/src/main/resources/templates/paymentModal.html
+++ b/src/main/resources/templates/paymentModal.html
@@ -67,7 +67,8 @@
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <label for="firstName" class="form-label">First name</label>
-                                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                                    <input type="text" class="form-control" id="firstName" placeholder="" value=""
+                                           required="">
                                     <div class="invalid-feedback">
                                         Valid first name is required.
                                     </div>
@@ -75,7 +76,8 @@
 
                                 <div class="col-sm-6">
                                     <label for="lastName" class="form-label">Last name</label>
-                                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                                    <input type="text" class="form-control" id="lastName" placeholder="" value=""
+                                           required="">
                                     <div class="invalid-feedback">
                                         Valid last name is required.
                                     </div>
@@ -83,7 +85,8 @@
 
 
                                 <div class="col-12">
-                                    <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
+                                    <label for="email" class="form-label">Email <span
+                                            class="text-muted">(Optional)</span></label>
                                     <input type="email" class="form-control" id="email" placeholder="you@example.com">
                                     <div class="invalid-feedback">
                                         Please enter a valid email address for shipping updates.
@@ -92,7 +95,8 @@
 
                                 <div class="col-6">
                                     <label for="address" class="form-label">Address</label>
-                                    <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
+                                    <input type="text" class="form-control" id="address" placeholder="1234 Main St"
+                                           required="">
                                     <div class="invalid-feedback">
                                         Please enter your shipping address.
                                     </div>
@@ -100,7 +104,8 @@
 
                                 <div class="col-6">
                                     <label for="address" class="form-label">Post-code</label>
-                                    <input type="text" class="form-control" id="postCode" placeholder="00-150" required="">
+                                    <input type="text" class="form-control" id="postCode" placeholder="00-150"
+                                           required="">
                                     <div class="invalid-feedback">
                                         Please enter your post code.
                                     </div>
@@ -108,7 +113,8 @@
 
                                 <div class="col-12">
                                     <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-                                    <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+                                    <input type="text" class="form-control" id="address2"
+                                           placeholder="Apartment or suite">
                                 </div>
 
                             </div>
@@ -117,12 +123,14 @@
 
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="same-address">
-                                <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
+                                <label class="form-check-label" for="same-address">Shipping address is the same as my
+                                    billing address</label>
                             </div>
 
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="save-info">
-                                <label class="form-check-label" for="save-info">Save this information for next time</label>
+                                <label class="form-check-label" for="save-info">Save this information for next
+                                    time</label>
                             </div>
 
                             <hr class="my-4">
@@ -131,12 +139,14 @@
 
                             <div class="my-3">
                                 <div class="form-check">
-                                    <input id="creditCardCheckBox" name="paymentMethod" type="radio" class="form-check-input">
+                                    <input id="creditCardCheckBox" name="paymentMethod" type="radio"
+                                           class="form-check-input">
                                     <label class="form-check-label" for="creditCardCheckBox">Credit card</label>
                                 </div>
 
                                 <div class="form-check">
-                                    <input id="paypalCheckBox" name="paymentMethod" type="radio" class="form-check-input">
+                                    <input id="paypalCheckBox" name="paymentMethod" type="radio"
+                                           class="form-check-input">
                                     <label class="form-check-label" for="paymentMethod">PayPal</label>
                                 </div>
                             </div>
