--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -1,9 +1,9 @@
 <header class="p-3 mb-3 border-bottom">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/static" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/static" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
 
-      </a>
+            </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 link-secondary">
@@ -46,18 +46,22 @@
             </form>
           </ul>
 
-        </li>
+                </li>
 
-      </ul>
+            </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-      </form>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+            </form>
 
-      <div class="text-end">
-        <button type="button" class="btn btn-light text-dark me-2" data-bs-toggle="modal" data-bs-target="#login-modal">Login</button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signin-modal">Sign in</button>
-      </div>
+            <div class="text-end">
+                <button type="button" class="btn btn-light text-dark me-2" data-bs-toggle="modal"
+                        data-bs-target="#login-modal">Login
+                </button>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signin-modal">Sign
+                    in
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
 </header>
