Users can register on database

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 <div th:replace="~{modals/paymentModal}"></div>
 <div th:replace="~{modals/myCartModal}"></div>
 <div th:replace="~{modals/loginModal}"></div>
-<div th:replace="~{modals/singUpModal}"></div>
+<div th:replace="~{modals/signUpModal}"></div>
 
 
 <div th:replace="~{modals/bio/asiaModal}"></div>
