--- a/src/main/resources/templates/modals/signUpModal.html
+++ b/src/main/resources/templates/modals/signUpModal.html
@@ -68,18 +68,23 @@
 
                                 <div class="card bg-glass">
                                     <div class="card-body px-4 py-5 px-md-5">
-                                        <form>
+                                        <div class="col-12 text-center my-4 h3">
+                                            MyShop Registration
+                                        </div>
+                                        <form th:action="@{/register}" method="post">
                                             <!-- 2 column grid layout with text inputs for the first and last names -->
                                             <div class="row">
                                                 <div class="col-md-6 mb-4">
                                                     <div class="form-outline">
-                                                        <input type="text" id="form3Example1" class="form-control"/>
+                                                        <input type="text" name="firstName" id="form3Example1"
+                                                               class="form-control"/>
                                                         <label class="form-label" for="form3Example1">First name</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6 mb-4">
                                                     <div class="form-outline">
-                                                        <input type="text" id="form3Example2" class="form-control"/>
+                                                        <input type="text" name="lastName" id="form3Example2"
+                                                               class="form-control"/>
                                                         <label class="form-label" for="form3Example2">Last name</label>
                                                     </div>
                                                 </div>
@@ -87,49 +92,57 @@
 
                                             <!-- Email input -->
                                             <div class="form-outline mb-4">
-                                                <input type="email" id="form3Example3" class="form-control"/>
+                                                <input type="email" name="email" id="form3Example3"
+                                                       class="form-control"/>
                                                 <label class="form-label" for="form3Example3">Email address</label>
+                                            </div>
+
+                                            <div class="form-outline mb-4">
+                                                <input type="text" name="address" id="address" class="form-control"/>
+                                                <label class="form-label" for="form3Example3">Address</label>
                                             </div>
 
                                             <!-- Password input -->
                                             <div class="form-outline mb-4">
-                                                <input type="password" id="form3Example4" class="form-control"/>
+                                                <input type="password" name="password" id="form3Example4"
+                                                       class="form-control"/>
                                                 <label class="form-label" for="form3Example4">Password</label>
                                             </div>
 
-                                            <!-- Checkbox -->
-                                            <div class="form-check d-flex justify-content-center mb-4">
-                                                <input class="form-check-input me-2" type="checkbox" value=""
-                                                       id="form2Example33" checked/>
-                                                <label class="form-check-label" for="form2Example33">
-                                                    Subscribe to our newsletter
-                                                </label>
-                                            </div>
+                                            <!--                                            &lt;!&ndash; Checkbox &ndash;&gt;-->
+                                            <!--                                            <div class="form-check d-flex justify-content-center mb-4">-->
+                                            <!--                                                <input class="form-check-input me-2" type="checkbox" value=""-->
+                                            <!--                                                       id="form2Example33" checked/>-->
+                                            <!--                                                <label class="form-check-label" for="form2Example33">-->
+                                            <!--                                                    Subscribe to our newsletter-->
+                                            <!--                                                </label>-->
+                                            <!--                                            </div>-->
 
                                             <!-- Submit button -->
-                                            <button type="submit" class="btn btn-primary btn-block mb-4">
-                                                Sign up
-                                            </button>
-
-                                            <!-- Register buttons -->
-                                            <div class="text-center">
-                                                <p>or sign up with:</p>
-                                                <button type="button" class="btn btn-link btn-floating mx-1">
-                                                    <i class="fab fa-facebook-f"></i>
-                                                </button>
-
-                                                <button type="button" class="btn btn-link btn-floating mx-1">
-                                                    <i class="fab fa-google"></i>
-                                                </button>
-
-                                                <button type="button" class="btn btn-link btn-floating mx-1">
-                                                    <i class="fab fa-twitter"></i>
-                                                </button>
-
-                                                <button type="button" class="btn btn-link btn-floating mx-1">
-                                                    <i class="fab fa-github"></i>
+                                            <div class="col-12 text-center">
+                                                <button type="submit" class="btn btn-primary mb-4 center-block">
+                                                    Sign up
                                                 </button>
                                             </div>
+                                            <!--                                            &lt;!&ndash; Register buttons &ndash;&gt;-->
+                                            <!--                                            <div class="text-center">-->
+                                            <!--                                                <p>or sign up with:</p>-->
+                                            <!--                                                <button type="button" class="btn btn-link btn-floating mx-1">-->
+                                            <!--                                                    <i class="fab fa-facebook-f"></i>-->
+                                            <!--                                                </button>-->
+
+                                            <!--                                                <button type="button" class="btn btn-link btn-floating mx-1">-->
+                                            <!--                                                    <i class="fab fa-google"></i>-->
+                                            <!--                                                </button>-->
+
+                                            <!--                                                <button type="button" class="btn btn-link btn-floating mx-1">-->
+                                            <!--                                                    <i class="fab fa-twitter"></i>-->
+                                            <!--                                                </button>-->
+
+                                            <!--                                                <button type="button" class="btn btn-link btn-floating mx-1">-->
+                                            <!--                                                    <i class="fab fa-github"></i>-->
+                                            <!--                                                </button>-->
+                                            <!--                                            </div>-->
                                         </form>
                                     </div>
                                 </div>
