add fo remove product from cart

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -4,6 +4,11 @@
     /*margin:2mm;*/
 
 }
+.foto-modal-cart{
+    width:105px;
+    height:77px;
+    margin:2mm;
+}
 
 .glyphicon {
     margin-right: 5px;
