--- a/src/main/resources/templates/modals/myCartModal.html
+++ b/src/main/resources/templates/modals/myCartModal.html
@@ -75,8 +75,8 @@
                                     <div class="card-body p-4" th:each="item, iterStat : ${cartItems}">
                                         <div class="row d-flex justify-content-between align-items-center">
                                             <div class="col-md-2 col-lg-2 col-xl-2">
-                                                <img class="" src="http://placehold.it/400x250/000/fff"
-                                                     th:attr="src='img\product_' + ${item.product.getId()} + '.jpg'" alt=""/>
+                                                <img class="foto-modal-cart" src="http://placehold.it/400x250/000/fff"
+                                                     th:attr="src='..\img\product_' + ${item.product.getId()} + '.jpg'" alt=""/>
                                             </div>
                                             <div class="col-md-3 col-lg-3 col-xl-3">
                                                 <p class="lead fw-normal mb-2"th:text="${item.product.getName()}"}>Product name</p>
@@ -107,7 +107,7 @@
                                                 <h5 class="mb-0" th:text=" '$' + ${item.product.getDefaultPrice()}"}>$499.00</h5>
                                             </div>
                                             <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                                <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i>
+                                                <a th:href="@{'/remove/' + ${item.product.id}}" class="text-danger"><i class="fas fa-trash fa-lg"></i>
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                          fill="currentColor" class="bi bi-cart-dash"
                                                          viewBox="0 0 16 16">
