payment its done

--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -16,17 +16,17 @@
             </svg>
             MyCart</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link px-2 link-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-            Checkout
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#paymentWindow">Modal</a></li>
-            <li><a class="dropdown-item" href="#">Paypal</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
+<!--        <li class="nav-item dropdown">-->
+<!--          <a class="nav-link px-2 link-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">-->
+<!--            Checkout-->
+<!--          </a>-->
+<!--          <ul class="dropdown-menu">-->
+<!--            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#paymentWindow">Modal</a></li>-->
+<!--            <li><a class="dropdown-item" href="#">Paypal</a></li>-->
+<!--            <li><hr class="dropdown-divider"></li>-->
+<!--            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
         <li class="nav-item dropdown">
           <a class="nav-link px-2 link-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
             Sort
