--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,8 +4,8 @@
             <h1 class="fw-light">MyShop</h1>
             <p class="lead text-muted">Najlepszy sklep na świecie</p>
             <p>
-                <a href="#" class="btn btn-primary my-2">cos moge zrobic</a>
-                <a href="#" class="btn btn-secondary my-2">tutaj tez</a>
+<!--                <a href="#" class="btn btn-primary my-2">cos moge zrobic</a>-->
+<!--                <a href="#" class="btn btn-secondary my-2">tutaj tez</a>-->
             </p>
         </div>
     </div>
