--- a/src/main/resources/templates/modals/myCartModal.html
+++ b/src/main/resources/templates/modals/myCartModal.html
@@ -12,7 +12,8 @@
                             <div class="col-10">
 
                                 <div class="d-flex justify-content-between align-items-center mb-4">
-                                    <h3 class="fw-normal mb-0 text-black">Shopping Cart</h3>
+                                    <h3 class="fw-normal mb-0 text-black">Shopping Cart </h3>
+                                    <p th:Text ="'totalprice:' + ${totalPrice}"> ${totalPrice}"}</p>
                                     <div>
                                         <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!"
                                                                                                     class="text-body">price
