--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,10 +20,10 @@
 
 <body>
 
-<div th:replace="~{navBar}"></div>
-<div th:replace="~{header}"></div>
-<div th:replace="~{product}"></div>
-<div th:replace="~{footer}"></div>
+<div th:replace="~{model/navBar}"></div>
+<div th:replace="~{model/header}"></div>
+<div th:replace="~{model/product}"></div>
+<div th:replace="~{model/footer}"></div>
 
 
 <div th:replace="~{modals/paymentModal}"></div>
