--- a/src/main/resources/templates/model/footer.html
+++ b/src/main/resources/templates/model/footer.html
@@ -1,7 +1,7 @@
 <div class="container" th:fragment="footer">
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
         <div class="col mb-3">
-            <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+            <a href="/static" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
                 <img src="/img/logo1.png" alt="logo" class="foto"></a>
             <p class="text-muted">© 2023</p>
         </div>
