--- a/src/main/resources/templates/model/navBar.html
+++ b/src/main/resources/templates/model/navBar.html
@@ -33,6 +33,9 @@
           </a>
           <ul class="dropdown-menu">
             <a>   Categories:</a>
+
+<!--              TODO -->
+
 <!--            <form th:action="@{/category}" method="post">-->
 <!--              <li th:each="category,iterStat :${categories}" >-->
 <!--                <button class="dropdown-item" name = "categoryId" type="submit" th:value="${category.getId()}"  th:text="${category.getDepartment()}">Category Title</button>-->
