--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 
     <script th:src="@{/js/main.js}" defer></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -19,6 +21,9 @@
 </head>
 
 <body>
+<div th:if="${param.error}">
+    Błędne dane logowania.
+</div>
 
 <div th:replace="~{model/navBar}"></div>
 <div th:replace="~{model/header}"></div>
