order history - done

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,7 @@
 <div th:replace="~{modals/myCartModal}"></div>
 <div th:replace="~{modals/loginModal}"></div>
 <div th:replace="~{modals/signUpModal}"></div>
+<div th:replace="~{modals/orderHistoryModal}"></div>
 
 
 <div th:replace="~{modals/bio/asiaModal}"></div>
