--- a/src/main/resources/templates/modals/paymentModal.html
+++ b/src/main/resources/templates/modals/paymentModal.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-md-7 col-lg-8">
                         <h4 class="mb-3">Billing address</h4>
-                        <form class="needs-validation was-validated" novalidate="">
+                        <form th:action="@{/order}" method="post" class="needs-validation was-validated" novalidate="">
                             <div class="row g-3">
                                 <div class="col-sm-6">
                                     <label for="firstName" class="form-label">First name</label>
@@ -60,6 +60,7 @@
                                         Valid first name is required.
                                     </div>
                                 </div>
+
 
                                 <div class="col-sm-6">
                                     <label for="lastName" class="form-label">Last name</label>
