fronted zrobiony do rejestraci i logowania

--- a/src/main/resources/templates/modals/signUpModal.html
+++ b/src/main/resources/templates/modals/signUpModal.html
@@ -98,7 +98,7 @@
                                             </div>
 
                                             <div class="form-outline mb-4">
-                                                <input type="text" name="address" id="address" class="form-control"/>
+                                                <input type="text" name="address"  class="form-control"/>
                                                 <label class="form-label" for="form3Example3">Address</label>
                                             </div>
 
@@ -112,7 +112,7 @@
                                                 <button type="submit" class="btn btn-primary mb-4 center-block">
                                                     Sign up
                                                 </button>
-                                                <div id="registerError" th:if="${acountExistError != null }" style="color: red" th:text ="${acountExistError}"></div>
+                                                <div id="register-Error" th:if="${acountExistError != null }" style="color: red" th:text ="${acountExistError}"></div>
                                             </div>
                                         </form>
                                     </div>
