--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
 <div th:replace="~{modals/myCartModal}"></div>
 <div th:replace="~{modals/loginModal}"></div>
 <div th:replace="~{modals/signUpModal}"></div>
+<div th:replace="~{modals/ForgotPasswordModal}"></div>
 
 
 <div th:replace="~{modals/bio/asiaModal}"></div>
