--- a/src/main/resources/templates/modals/loginModal.html
+++ b/src/main/resources/templates/modals/loginModal.html
@@ -19,8 +19,9 @@
                                                          style="width: 185px;" alt="logo">
                                                     <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
                                                 </div>
-                                                <div id="loginError" th:if="${wrongLoginDataError != null }" style="color: red" th:text ="${wrongLoginDataError}"></div>
-                                                <div id="registrationSucces" th:if="${registrationSucces != null }" style="color: green" th:text ="${registrationSucces}"></div>
+                                                <div id="login-Error" th:if="${wrongLoginDataError != null }" style="color: red" th:text ="${wrongLoginDataError}"></div>
+                                                <div id="registration-Succes" th:if="${registrationSucces != null }" style="color: green" th:text ="${registrationSucces}"></div>
+                                                <div id="reset-password-succes" th:if="${resetPasswordSucces != null }" style="color: green" th:text ="${resetPasswordSucces}"></div>
                                                 <form th:action="@{/login}" method="post">
                                                     <p>Please login to your account</p>
 
@@ -41,14 +42,17 @@
                                                                 type="submit">Log
                                                             in
                                                         </button>
-                                                        <a class="text-muted" href="/forgotPassword">Forgot password?</a>
+
+                                                        <a class="text-muted" href="#" id="forget-password" data-target="#pwdModal" data-toggle="modal">Forgot password?</a>
                                                     </div>
 
                                                     <div class="d-flex align-items-center justify-content-center pb-4">
                                                         <p class="mb-0 me-2">Don't have an account?</p>
+
                                                         <button type="button" id="create-account" class="btn btn-outline-danger">Create
                                                             new
                                                         </button>
+                                                        <button type="button" id="login-close" hidden="hidden" data-bs-dismiss="modal">hidden Close</button>
                                                     </div>
 
                                                 </form>
