--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -1,20 +1,64 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Resetowanie hasła</title>
+  <meta charset="utf-8"/>
+  <meta name="author" content="Codecool"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <title>MyShop</title>
+
+  <script th:src="@{/js/main.js}" defer></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/resetPassword.css}"> .
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+  <link rel="stylesheet" type="text/css" th:href="@{/css/custom.css}"/>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-<h2>Resetowanie hasła</h2>
-<form th:action="@{/resetPassword}" method="POST">
-  <input type="hidden" name="token" th:value="${token}">
-  <div>
-    <label for="password">Nowe hasło:</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <div>
-    <button type="submit">Zresetuj hasło</button>
-  </div>
-</form>
+  <section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+              <div class="mb-md-5 mt-md-4 pb-5">
+                <h2 class="fw-bold mb-2 text-uppercase">Reset Password</h2>
+                <h2 class="fw-bold mb-2 text-uppercase" th:if="${Wrongtoken != null }" style="color: Red" th:text ="${Wrongtoken}"></h2>
+                <form th:action="@{/resetPassword}" method="POST">
+                  <div th:if="${Wrongtoken == null }">
+                    <p class="text-white-50 mb-5">Please enter your password!</p>
+                    <input type="hidden" name="token" th:value="${token}">
+                    <div class="form-outline form-white mb-4">
+                      <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
+                      <label class="form-label" for="typePasswordX">Password</label>
+                    </div>
+                    <button class="btn btn-outline-light btn-lg px-5" type="submit">Reset Password</button>
+                  </div>
+                </form>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!--JS scripts start-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+<!--JS scripts end-->
 </body>
 </html>
